Fix image gallery gap

--- a/src/Bookmarks.scss
+++ b/src/Bookmarks.scss
@@ -1,16 +1,30 @@
 
+.bookmark-wrapper{
+  position: relative;
+}
+
+.prev-icon {
+  position:absolute;
+  top: 5%;
+  left: 18%;
+  z-index: 1;
+}
+
 .bookmarks-content {
   display:flex;
   flex-direction: column;
   align-items: center;
   background: black;
-  padding-top: 10%;
+  padding-top: 25%;
   height: 100vh;
   overflow-y: scroll;
+  
+
 
   .image-content{
     width: 80%;
     margin-bottom: -5px;
+    z-index: 5;
 
     figcaption {
       position: absolute;    
@@ -54,22 +68,32 @@
 @media screen and (min-width: 768px){
   .bookmarks-content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-   
+    grid-template-columns: 1fr 4fr 4fr 1fr;
+    
+    .image-content {
 
-    .title {
-      display: none;
-    }
-    .image-content{
-      margin:10%;
-      width: 77%;   
-      figcaption h2 {
+      &:nth-child(even){
+        grid-column: 3 / span 1;
+       
+        
+      }
+      &:nth-child(odd){
+        grid-column: 2 / span 1;
+      }
+
+      img.image {
+        max-width: 110%;
+      }
+      figcaption {
+        h2 {
         font-size: 1.4em;
+        }
       }   
       .buttonAddRemove{
         height: 23px;
       }
     }
+    }
     
-  }
+    
 }
